# Generated by Django 5.2.17 on 2026-08-28 09:56

import django.contrib.auth.models
import django.contrib.auth.validators
import django.db.models.deletion
import django.utils.timezone
from django.conf import settings
from django.db import migrations, models


class Migration(migrations.Migration):

    initial = True

    dependencies = [
        ('auth', '0012_alter_user_first_name_max_length'),
    ]

    operations = [
        migrations.CreateModel(
            name='Boss',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('name', models.CharField(max_length=50, verbose_name='ボス名')),
                ('recommended_attribute_1', models.CharField(choices=[('fire', '火属性'), ('water', '水属性'), ('wind', '風属性'), ('light', '光属性'), ('dark', '闇属性'), ('earth', '地属性')], max_length=10, verbose_name='推奨属性1')),
                ('recommended_attribute_2', models.CharField(choices=[('fire', '火属性'), ('water', '水属性'), ('wind', '風属性'), ('light', '光属性'), ('dark', '闇属性'), ('earth', '地属性')], max_length=10, verbose_name='推奨属性2')),
                ('non_recommended_attribute', models.CharField(choices=[('fire', '火属性'), ('water', '水属性'), ('wind', '風属性'), ('light', '光属性'), ('dark', '闇属性'), ('earth', '地属性')], max_length=10, verbose_name='非推奨属性')),
            ],
            options={
                'verbose_name': 'ボス',
                'verbose_name_plural': 'ボス',
            },
        ),
        migrations.CreateModel(
            name='Character',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('name', models.CharField(max_length=50, verbose_name='キャラクター名')),
                ('attribute', models.CharField(choices=[('fire', '火属性'), ('water', '水属性'), ('wind', '風属性'), ('light', '光属性'), ('dark', '闇属性'), ('earth', '地属性')], max_length=10, verbose_name='属性')),
            ],
            options={
                'verbose_name': 'キャラクター',
                'verbose_name_plural': 'キャラクター',
            },
        ),
        migrations.CreateModel(
            name='Season',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('name', models.CharField(max_length=50, verbose_name='シーズン名')),
                ('start_date', models.DateField(verbose_name='開始日')),
            ],
            options={
                'verbose_name': 'シーズン',
                'verbose_name_plural': 'シーズン',
                'ordering': ['-start_date'],
            },
        ),
        migrations.CreateModel(
            name='CustomUser',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('password', models.CharField(max_length=128, verbose_name='password')),
                ('last_login', models.DateTimeField(blank=True, null=True, verbose_name='last login')),
                ('is_superuser', models.BooleanField(default=False, help_text='Designates that this user has all permissions without explicitly assigning them.', verbose_name='superuser status')),
                ('username', models.CharField(error_messages={'unique': 'A user with that username already exists.'}, help_text='Required. 150 characters or fewer. Letters, digits and @/./+/-/_ only.', max_length=150, unique=True, validators=[django.contrib.auth.validators.UnicodeUsernameValidator()], verbose_name='username')),
                ('first_name', models.CharField(blank=True, max_length=150, verbose_name='first name')),
                ('last_name', models.CharField(blank=True, max_length=150, verbose_name='last name')),
                ('email', models.EmailField(blank=True, max_length=254, verbose_name='email address')),
                ('is_staff', models.BooleanField(default=False, help_text='Designates whether the user can log into this admin site.', verbose_name='staff status')),
                ('is_active', models.BooleanField(default=True, help_text='Designates whether this user should be treated as active. Unselect this instead of deleting accounts.', verbose_name='active')),
                ('date_joined', models.DateTimeField(default=django.utils.timezone.now, verbose_name='date joined')),
                ('display_name', models.CharField(max_length=30, verbose_name='表示名（ランキングで表示される名前）')),
                ('is_banned', models.BooleanField(default=False, verbose_name='投稿禁止フラグ')),
                ('groups', models.ManyToManyField(blank=True, help_text='The groups this user belongs to. A user will get all permissions granted to each of their groups.', related_name='user_set', related_query_name='user', to='auth.group', verbose_name='groups')),
                ('user_permissions', models.ManyToManyField(blank=True, help_text='Specific permissions for this user.', related_name='user_set', related_query_name='user', to='auth.permission', verbose_name='user permissions')),
            ],
            options={
                'verbose_name': 'ユーザー',
                'verbose_name_plural': 'ユーザー',
            },
            managers=[
                ('objects', django.contrib.auth.models.UserManager()),
            ],
        ),
        migrations.CreateModel(
            name='ScorePost',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('score', models.PositiveIntegerField(verbose_name='スコア')),
                ('mvp_slot', models.PositiveSmallIntegerField(choices=[(1, '使用キャラ1'), (2, '使用キャラ2'), (3, '使用キャラ3')], verbose_name='MVPキャラの枠')),
                ('screenshot_url', models.URLField(verbose_name='証拠スクショのURL')),
                ('posted_at', models.DateTimeField(auto_now_add=True, verbose_name='投稿日時')),
                ('is_flagged', models.BooleanField(default=False, verbose_name='不正フラグ')),
                ('is_hidden', models.BooleanField(default=False, verbose_name='非表示フラグ')),
                ('boss', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, related_name='score_posts', to='ranking.boss', verbose_name='ボス')),
                ('character_1', models.ForeignKey(on_delete=django.db.models.deletion.PROTECT, related_name='+', to='ranking.character', verbose_name='使用キャラ1')),
                ('character_2', models.ForeignKey(on_delete=django.db.models.deletion.PROTECT, related_name='+', to='ranking.character', verbose_name='使用キャラ2')),
                ('character_3', models.ForeignKey(on_delete=django.db.models.deletion.PROTECT, related_name='+', to='ranking.character', verbose_name='使用キャラ3')),
                ('user', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, related_name='score_posts', to=settings.AUTH_USER_MODEL, verbose_name='投稿者')),
            ],
            options={
                'verbose_name': 'スコア投稿',
                'verbose_name_plural': 'スコア投稿',
                'ordering': ['-posted_at'],
            },
        ),
        migrations.AddField(
            model_name='boss',
            name='season',
            field=models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, related_name='bosses', to='ranking.season', verbose_name='シーズン'),
        ),
    ]
